@@ -1,4 +1,5 @@
 Revision history for Perl extension IPGen::V4.
 
-1  Thu Jan 16 00:56:17 2014
-
+1  Jan 16 00:56:17 2014
+2  Jan 16 11:30:00 2014 
+	Bug-fix in full range rand (producing invalid ip addresses)
